--- a/src/Lykke.BilJob.EthereumClassic/Lykke.BilJob.EthereumClassic.csproj
+++ b/src/Lykke.BilJob.EthereumClassic/Lykke.BilJob.EthereumClassic.csproj
@@ -8,6 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <None Update="Dockerfile">
+            <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+        </None>
+    </ItemGroup>
+    
+    <ItemGroup>
         <PackageReference Include="Lykke.Quintessence.Job" Version="0.0.7-beta" />
     </ItemGroup>
 
